fix: publico section mobile

--- a/styles/publico.css
+++ b/styles/publico.css
@@ -4,68 +4,93 @@
     --primary-blue: #4FA8DA;
 }
 
-.publico-container {
-    padding-top: 10rem;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    column-gap: 1rem;
+@media(min-width: 0px) {
+    .publico-container {
+        padding-top: 10rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        column-gap: 1rem;
+    }
+
+    .publico-container h2 {
+        font-size: 2rem;
+        font-weight: 500;
+        text-align: center;
+        padding-bottom: 2rem;
+    }
+
+    .publico-container>div {
+        display: flex;
+        flex-direction: column;
+        row-gap: 3rem;
+    }
+
+    .publico-container div>section {
+        display: flex;
+        flex-direction: column;
+        row-gap: 3rem;
+    }
+
+    .publico-img-container {
+        position: relative;
+        overflow: hidden;
+        border-radius: 15px;
+        box-shadow: 1px 1px 20px rgba(0, 0, 0, .30);
+    }
+
+    .publico-img-container p {
+        position: absolute;
+        bottom: 1rem;
+        left: 1rem;
+        z-index: 1;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        filter: drop-shadow(1px 1px 1px black);
+    }
+
+    .publico-img-container::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        background-image: linear-gradient(to top, rgba(79, 168, 218, .40), transparent);
+    }
+
 }
 
-.publico-container div {
-    display: flex;
-    column-gap: 1rem;
-}
+@media(min-width: 1024px) {
+    .publico-container div {
+        display: flex;
+        flex-direction: row;
+        column-gap: 1rem;
+    }
 
-.publico-container h2 {
-    font-size: 2rem;
-    font-weight: 500;
-    text-align: center;
-    padding-bottom: 2rem;
-}
+    .publico-container div>section {
+        display: flex;
+        flex-direction: column;
+        row-gap: 1rem;
+    }
 
-.publico-container div >section {
-    display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
-}
+    .publico-img-container {
+        width: 25vw;
+        aspect-ratio: 1;
+        position: relative;
+        overflow: hidden;
+        border-radius: 15px;
+        box-shadow: 1px 1px 20px rgba(0, 0, 0, .30);
+    }
 
-.publico-img-container {
-    width: 25vw;
-    aspect-ratio: 1;
-    position: relative;
-    overflow: hidden;
-    border-radius: 15px;
-    box-shadow: 1px 1px 20px rgba(0, 0, 0, .30);
-}
+    .publico-img-container img {
+        width: 100%;
+        height: 100%;
+    }
 
-.publico-img-container img {
-    width: 100%;
-    height: 100%;
-}
-
-.publico-img-container::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    background-image: linear-gradient(to top, rgba(73, 119, 229, .70), transparent);
-}
-
-.publico-img-container p {
-    position: absolute;
-    bottom: 1rem;
-    left: 1rem;
-    z-index: 1;
-    color: white;
-    display: flex;
-    flex-direction: column;
-}
-
-
-.img-small {
-    width: 22.2vw;
-    aspect-ratio: 16/9;
+    .img-small {
+        width: 22.2vw;
+        aspect-ratio: 16/9;
+    }
 }
